feat: update faq formatting

--- a/docs/en-gb/modules/plugins/pages/faq-plugins.adoc
+++ b/docs/en-gb/modules/plugins/pages/faq-plugins.adoc
@@ -11,51 +11,81 @@ This page contains frequently asked questions about plugins.
 
 This section describes solutions to issues that frequently occur when adding plugins to your system.
 
-[qanda]
-I've purchased a plugin on plentyMarketplace, but it doesn't appear in my list of uninstalled plugins. Where can I find it?::
-    plentymarkets uses a cache for purchased plugins. If you've purchased a plugin and it doesn't appear in the list of plugins yet, wait a few minutes. The list of plugins is updated every 5{nbsp}minutes.
+[.collapseBox]
+.I've purchased a plugin on plentyMarketplace, but it doesn't appear in my list of uninstalled plugins. Where can I find it?
+--
+plentymarkets uses a cache for purchased plugins. If you've purchased a plugin and it doesn't appear in the list of plugins yet, wait a few minutes. The list of plugins is updated every 5{nbsp}minutes.
+--
 
-I get an error message when I try to add a Git repository to my system. What can I do?::
-    First, check your login details and ensure that the branch you entered really exists. If the error still occurs, your plugin JSON may be invalid. plentymarkets checks the plugin JSON when adding repositories to the system. Compare your plugin JSON with the requirements specified in our link:https://developers.plentymarkets.com/dev-doc/plugin-information[developer documentation^].
+[.collapseBox]
+.I get an error message when I try to add a Git repository to my system. What can I do?
+--
+First, check your login details and ensure that the branch you entered really exists. If the error still occurs, your plugin JSON may be invalid. plentymarkets checks the plugin JSON when adding repositories to the system. Compare your plugin JSON with the requirements specified in our link:https://developers.plentymarkets.com/dev-doc/plugin-information[developer documentation^].
+--
 
 [#installing-plugins]
 == Installing plugins
 
 This sections answers questions regarding the use of plugins.
 
-[qanda]
-Why does my plugin not work?::
-    Make sure that you've successfully deployed the plugin. You can tell that the plugin has been deployed if the *Active Version* column shows a version number. If there is no version number, deploy the plugin set (icon:save[role=green]). +
-    image:plugins:plugin-aktive-version.png[width=640]
+[.collapseBox]
+.Why does my plugin not work?
+--
+Make sure that you've successfully deployed the plugin. You can tell that the plugin has been deployed if the *Deployed* column shows a version number. If there is no version number, deploy the plugin set (icon:save[role=green]).
 
-I've deployed the plugin set, but there's no active version displayed. What's the problem?::
-    There may be multiple causes. First, it's possible that deployment failed. You can see if the deployment process was successful by checking the timestamp in the plugin overview: +
-    image:plugins:plugin-set-zeitstempel.png[width=640]
+image::plugins:plugin-active-version.png[width=640]
+--
 
-The deployment has failed and the details say `Plugin MyPlugin requires “xy”.:` What does this mean?::
-    This entry means the plugin requires another plugin called _xy_ to run properly. You have to install this second plugin in your plugin set before you can deploy _MyPlugin_.
+[.collapseBox]
+.I've deployed the plugin set, but there's no deployed version displayed. What's the problem?
+--
+There may be multiple causes. First, it's possible that deployment failed. You can see if the deployment process was successful by checking the timestamp in the plugin overview:
 
-There's neither a timestamp nor an error message. What do I do now?::
-    Confirm that your DNS settings are correct and you have a valid SSL certificate. +
-    For further information on ordering SSL certificates, refer to the page xref:business-decisions:ssl-certificate.adoc#[SSL certificates].
+image::plugins:plugin-set-timestamp.png[width=640]
+--
+
+[.collapseBox]
+.The deployment has failed and the details say "Plugin MyPlugin requires xy.:" What does this mean?
+--
+This entry means the plugin requires another plugin called _xy_ to run properly. You have to install this second plugin in your plugin set before you can deploy _MyPlugin_.
+--
+
+[.collapseBox]
+.There's neither a timestamp nor an error message. What do I do now?
+--
+Confirm that your DNS settings are correct and you have a valid SSL certificate.
+
+For further information on ordering SSL certificates, refer to the page xref:business-decisions:ssl-certificate.adoc#[SSL certificates].
+--
 
 [#using-plugins]
 == Using plugins
 
-[qanda]
-I've successfully deployed the plugin. Why does it not show up in my online store?::
-    Some plugins have to be configured before you can use them. Check the plugin instructions on plentyMarketplace for details. Make sure that you have set all the required xref:plugins:configuring-installed-plugins.adoc#container-links[container links] if there are any.
+[.collapseBox]
+.I've successfully deployed the plugin. Why does it not show up in my online store?
+--
+Some plugins have to be configured before you can use them. Check the plugin instructions on plentyMarketplace for details. Make sure that you have set all the required xref:plugins:configuring-installed-plugins.adoc#container-links[container links] if there are any.
+--
 
-The plugin is supposed to add new menus to my back end. Why aren't they shown?::
-    Check that you've selected the plugin set where you've installed the plugin as xref:plugins:installing-added-plugins.adoc#back-end-plugin-set[back end plugin set] for your user account.
+[.collapseBox]
+.The plugin is supposed to add new menus to my back end. Why aren't they shown?
+--
+Check that you've selected the plugin set where you've installed the plugin as xref:plugins:installing-added-plugins.adoc#back-end-plugin-set[back end plugin set] for your user account.
+--
 
-I've checked all the previous points, but the plugin still doesn't work properly. Is there anything else I can do?::
-    It's possible that the plugin wasn't installed completely. You can re-install the plugin by repairing it. To repair the plugin, open the plugin set. Click on more actions ((material:more_vert[])). Then click on material:construction[] *Repair* button and confirm the query. +
-    All your settings are retained when repairing a plugin.
+[.collapseBox]
+.I've checked all the previous points, but the plugin still doesn't work properly. Is there anything else I can do?
+--
+It's possible that the plugin wasn't installed completely. You can re-install the plugin by repairing it. To repair the plugin, open the plugin set. Click on more actions ((material:more_vert[])). Then click on material:construction[] *Repair* button and confirm the query.
+
+All your settings are retained when repairing a plugin.
+--
 
 [#login]
 == Login
 
-[qanda]
-After installing and deploying a plugin, I can no longer log into my system. How can I access my back end again?::
-    Log in using the xref:welcome:login-tour.adoc#70[safe mode]. Then xref:plugins:removing-installed-plugins.adoc#deactivating-plugins[deactivate] the plugin. You should be able to log in normally again.
+[.collapseBox]
+.After installing and deploying a plugin, I can no longer log into my system. How can I access my back end again?
+--
+Log in using the xref:welcome:login-tour.adoc#70[safe mode]. Then xref:plugins:removing-installed-plugins.adoc#deactivating-plugins[deactivate] the plugin. You should be able to log in normally again.
+--
