ADD order types and more

--- a/docs/de-de/modules/auftraege/pages/design-order-view.adoc
+++ b/docs/de-de/modules/auftraege/pages/design-order-view.adoc
@@ -4,6 +4,7 @@
 :author: team-order-core
 
 Auf dieser Handbuchseite erfährst du, wie du die Auftragsübersicht nach deinen Bedürfnissen gestaltest. Mit Hilfe der MyView kannst du beispielsweise entscheiden, welche Splaten für deine Aufträge sichtbar sind und wie diese angeordnet sind.
+Die Detailansicht eines Auftrags ändert sich je nach Auftragstyp. Für jeden Typ gibt es somit eine individuelle Übersicht mit den jeweils relevanten Informationen.
 
 //siehe kapitel auftragsübersicht einrichten auf seite aufträge verwalten - inhalte hierhin überführen und anpassen
 
@@ -24,11 +25,13 @@ Auf dieser Handbuchseite erfährst du, wie du die Auftragsübersicht nach deinen
 
 | *Speichern*
 | material:save[]
-|Hast du Änderungen in einem Auftrag vorgenommen, wird dieser Button aktiviert und du kannst deine Änderungen speichern.
+|Hast du Änderungen in einem Auftrag vorgenommen, wird diese Schaltfläche aktiviert und du kannst deine Änderungen speichern. +
+Diese Schaltfläche wird standardmäßig in der Toolbar angezeigt.
 
 | *Aufträge erstellen*
 | material:shopping_cart[]
 |Ermöglicht das Erstellen von Kindaufträgen für einen Auftrag. Je nach Auftragstyp stehen verschiedene Optionen zur Verfügung. +
+Diese Schaltfläche wird standardmäßig in der Toolbar angezeigt. +
 Du kannst die folgenden Auftragstypen als Kindaufträge anlegen:
 
 * Auftrag
@@ -46,17 +49,35 @@ Du kannst die folgenden Auftragstypen als Kindaufträge anlegen:
 
 ** Für alle Artikel: Alle Artikel werden jeweils mit der maximal verfügbaren Anzahl automatisch zum Warenkorb hinzugefügt.
 ** Für bestimmte Artikel: Die Tabelle des Warenkorbs ist zunächst leer, d.h. die gewünschten Artikel müssen manuell hinzugefügt werden.
-** Automatisch aufteilen (Nur beim Typ Lieferauftrag)
+** Automatisch aufteilen (Nur beim Typ Lieferauftrag): Die Artikel werden je nach Einstellungen automatisch aufgeteilt.
+
+| *Warenausgang buchen*
+| material:input[]
+|Erlaubt den Warenausgang direkt zu buchen, wodurch der Bestand der Varianten reduziert wird, wenn du Bestand führst. Der Status des Auftrags ändert sich automatisch in Status 7. +
+Diese Schaltfläche wird standardmäßig in der Toolbar angezeigt.
+
+//wo verfügbar? Ansonsten rausnehmen
+| *Waren zurückbuchen*
+| material:input[]
+|Bucht die Artikel vollständig oder teilweise zurück. Bei dieser Option wird der Warenausgang nicht zurückgesetzt. +
+Diese Schaltfläche wird standardmäßig in der Toolbar angezeigt.
+
+| *E-Mail-Service*
+| material:email[]
+|Öffnet das Tab *E-Mail-Vorlagen* und ermöglicht es dir, eine E-Mail-Vorlage direkt an die Kund:in zu senden oder bereits gesendete Vorlagen einzusehen. +
+Diese Schaltfläche wird standardmäßig in der Toolbar angezeigt.
 
 | *Auftrag teilen*
 | material:call_split[]
-|Teilt einen Auftrag.
+|Teilt einen Auftrag. +
+Diese Funktion ist im Kontextmenü (material:more_vert[]) der Toolbar verfügbar.
 //weitere Schritte geteilter Auftrag?
 
 | *Kopieren*
 | material:content_copy[]
 |Kopiert einen Auftrag. Anschließend wird der kopierte Auftrag in blauer Schrift in der Seitennavigation angezeigt. +
 Du kannst einen Auftrag vollständig kopieren, z.B. wenn die Kund:in die gleiche Bestellung noch einmal tätigt oder mehrere Personen die gleiche Bestellung tätigen. +
+Diese Funktion ist im Kontextmenü (material:more_vert[]) der Toolbar verfügbar.
 
 | *Lagerorte zuweisen*
 | material:warehouse[]
@@ -65,35 +86,28 @@ Du kannst einen Auftrag vollständig kopieren, z.B. wenn die Kund:in die gleiche
 Die Zuordnung des Lagerorts ist für Pick-/Packlisten relevant. +
 *_Tipp:_* Lagerorte können Artikeln auch per Ereignisaktion zugeordnet werden. +
 *Lagerorte lösen*: Löst zugewiesene Lagerorte von der Auftragsposition. +
+Diese Funktion ist im Kontextmenü (material:more_vert[]) der Toolbar verfügbar.
 
 | *Kaufabwicklung*
 | material:visibility[]
-|Klicke auf material:visibility[], um zum plentyShop LTS weitergeleitet zu werden. Der Auftrag wird dort geöffnet.
+|Klicke auf material:visibility[], um zum plentyShop LTS weitergeleitet zu werden. Der Auftrag wird dort geöffnet. +
+Diese Funktion ist im Kontextmenü (material:more_vert[]) der Toolbar verfügbar.
 
 | *Gutschein einlösen*
 | material:card_giftcard[]
-|Ermöglicht das manuelle Einlösen von Gutscheinen. Hier wird zwischen plentymarkets Kampagnen und externen Kampagnen unterschieden. Weitere Informationen findest du im Kapitel xref:working-with-orders#redeem-coupon[Gutscheine einlösen].
-
-| *Warenausgang buchen*
-| material:input[]
-|Erlaubt den Warenausgang direkt zu buchen, wodurch der Bestand der Varianten reduziert wird, wenn du Bestand führst. Der Status des Auftrags ändert sich automatisch in Status 7.
-
-| *Waren zurückbuchen*
-| material:input[]
-|Bucht die Artikel vollständig oder teilweise zurück. Bei dieser Option wird der Warenausgang nicht zurückgesetzt.
-
-| *E-Mail-Service*
-| material:email[]
-|Öffnet das Tab *E-Mail-Vorlagen* und ermöglicht es dir, eine E-Mail-Vorlage direkt an die Kund:in zu senden oder bereits gesendete Vorlagen einzusehen.
+|Ermöglicht das manuelle Einlösen von Gutscheinen. Hier wird zwischen plentymarkets Kampagnen und externen Kampagnen unterschieden. Weitere Informationen findest du im Kapitel xref:working-with-orders#redeem-coupon[Gutscheine einlösen]. +
+Diese Funktion ist im Kontextmenü (material:more_vert[]) der Toolbar verfügbar.
 
 | *Gesperrt*
 | material:lock[]
-|Der Auftrag kann nur eingeschränkt bearbeitet werden. Wenn du mit der Maus über die Schaltfläche fährst, werden weitere Informationen zum Sperrstatus angezeigt und wie du den Auftrag entsperren kannst.
+|Der Auftrag kann nur eingeschränkt bearbeitet werden. Wenn du mit der Maus über die Schaltfläche fährst, werden weitere Informationen zum Sperrstatus angezeigt und wie du den Auftrag entsperren kannst. +
+Diese Schaltfläche befindet sich ganz rechts in der Toolbar und wird nur in gesperrten Aufträgen angezeigt.
 
 | *Auftrag löschen*
 | material:delete[]
 |Klicke rechts oben auf material:delete[] *Auftrag löschen*, um einen Auftrag zu löschen. Bestätige anschließend die Sicherheitsabfrage. +
-Beachte, dass nicht alle Aufträge gelöscht werden können.
+Beachte, dass nicht alle Aufträge gelöscht werden können. +
+Diese Funktion ist im Kontextmenü (material:more_vert[]) der Toolbar verfügbar.
 //wann kann ein Auftrag nicht gelöscht werden?
 |===
 
