--- a/docs/de-de/modules/auftraege/pages/order-type-delivery-order.adoc
+++ b/docs/de-de/modules/auftraege/pages/order-type-delivery-order.adoc
@@ -167,6 +167,8 @@ include::partial$create-order-type.adoc[]
 
 |===
 
+//menü artikel bearbeiten verlinken
+
 [#automatically-create-delivery-orders]
 == Lieferaufträge automatisch anlegen
 
