--- a/docs/de-de/modules/auftraege/pages/order-type-warranty.adoc
+++ b/docs/de-de/modules/auftraege/pages/order-type-warranty.adoc
@@ -1,6 +1,6 @@
 = Auftragstyp Gewährleistung
 
-:keywords: Gewährleistung, Garantie, Umtausch, Gutschrift
+:keywords: Gewährleistung, Garantie, Umtausch, neue Lieferung, Rückerstattung
 :author: team-order-core
 
 Gewährleistungen sind xref:auftraege:order-type-return.adoc#[Retouren] relativ ähnlich, denn in beiden Fällen bekommst du Waren eines Auftrags im *Status 7* wieder zurückgesendet. Im Gegensatz zur Retoure erwarten Kund:innen bei einer Gewährleistung aber entweder eine neue Lieferung oder eine Rückerstattung des Rechnungsbetrags mittels einer xref:auftraege:order-type-credit-note.adoc#[Gutschrift].
@@ -135,7 +135,6 @@ Zum Abschließen einer Gewährleistung musst du, wenn für die Ersatzware ein Au
 
 Um die Bearbeitung einer Gewährleistung durch einen Umtausch abzuschließen, gehe wie im Folgenden beschrieben vor.
 
-// für neue UI anpassen
 [.instruction]
 Gewährleistung durch Umtausch abschließen:
 
@@ -162,43 +161,3 @@ Gewährleistung durch Umtausch abschließen:
 ====
 Grundsätzlich müssen Zahlungen zu Gewährleistungen nur dann gebucht werden, wenn mit Käufer:innen ein Aufpreis vereinbart wurde. In diesem Fall buchst du den Zahlungseingang nach erfolgter Zahlung im Bereich *Zugeordnete Zahlungen* der Gewährleistung.
 ====
-
-Um die Bearbeitung einer Gewährleistung durch eine Gutschrift an die Käufer:in abzuschließen, gehe wie im Folgenden beschrieben vor.
-
-// korrekt so für neue UI? oder hier "Für alle Arikel" wählen, da Gewährleistund abgeschlossen werden soll?
-//IN NEUER UI KANN MAN IN EINER GEWÄHRLEISTUNG KEINE GUTSCHRIFT ANLEGEN
-[.instruction]
-Gewährleistung durch Gutschrift abschließen:
-
-. Öffne das Menü *Aufträge » Aufträge (Testphase)*.
-. Führe die Suche aus, um Aufträge anzuzeigen.
-. Öffne den Haupt- oder Retourenauftrag zur Gewährleistung, für die du eine Gutschrift anlegen möchtest.
-. Klicke oben auf *Aufträge erstellen* (material:shopping_cart[]) > *Gutschrift*.
-. Wähle eine Option. Beachte dazu die Erläuterungen in <<table-create-{ordertype}>>. +
-→ Wählst du *Für bestimmte Artikel*, wird die Übersicht zum Anlegen der Gutschrift geöffnet.
-. Nimm die Einstellungen vor. Beachte dazu die Erläuterungen in <<table-settings-cretdit-note>>.
-. *Speichere* (material:save[]) die Einstellungen. +
-→ Die Gutschrift wird angelegt.
-
-include::partial$create-order-type.adoc[]
-
-[[table-settings-credit-note]]
-.Einstellungen für Gutschriften in Gewährleistungen
-[cols="1,3"]
-|===
-
-|
-|
-
-|
-|
-
-|
-|
-
-|
-|
-//hier tabelle mit einstellungen hinzufügen (für bestimmte Artikel)
-
-// prüfen: für neue UI noch korrekt?
-Der weitere Bearbeitungsprozess läuft identisch mit dem regulären Anlegen einer Gutschrift und dem Erzeugen eines Gutschriftbelegs ab und wird im Kapitel xref:auftraege:auftraege-verwalten.adoc#500[Auftragstyp Gutschrift nutzen] detailliert beschrieben.
