--- a/docs/de-de/modules/auftraege/pages/working-with-orders.adoc
+++ b/docs/de-de/modules/auftraege/pages/working-with-orders.adoc
@@ -3,6 +3,8 @@
 :keywords: Auftragsanlage, Aufträge anlegen, Gruppenfunktionen für Aufträge
 :author: team-order-core
 
+//menü artikel bearbeiten (im bereich auftragspositionen) hinzufügen
+
 Aufträge bilden deine Verkäufe sowie damit einhergehende und übliche Geschäftsvorfälle ab. Mithilfe von xref:auftraege:order-types.adoc#[Auftragstypen] werden die unterschiedlichen Geschäftsvorfälle kenntlich gemacht. Fortschritte bei der Bearbeitung eines Auftrags werden durch xref:auftraege:order-statuses.adoc#1200[Auftragsstatus] angezeigt. Welche Möglichkeiten dir Auftragstypen und Auftragsstatus bieten und wie du Aufträge abwickelst, erfährst du in den folgenden Beschreibungen. Alle Aufträge werden zentral und in einem einheitlichen Format erfasst. Bereits in der xref:auftraege:auftraege-verwalten.adoc#1400[Auftragsübersicht] siehst du wichtige Informationen auf einen Blick und kannst einige Arbeiten direkt ausführen.
 
 [#basic-info-create-orders]
@@ -12,27 +14,6 @@ In plentymarkets wird ein Auftrag automatisch angelegt, wenn Kund:innen Bestellu
 Aufträge, die nicht über den Webshop oder einen Marktplatz bei dir eingehen, legst du xref:auftraege:auftraege-verwalten.adoc#200[manuell] im System an. Das ist beispielsweise bei telefonischen oder E-Mail-Bestellungen sowie bei Barverkäufen der Fall.
 
 Passe die xref:auftraege:grundeinstellungen.adoc#[Grundeinstellungen] im Menü *Einrichtung » Aufträge » Einstellungen* an, bevor du die ersten Aufträge in deinem plentymarkets System abwickelst. Speichere die Grundeinstellungen auch dann einmalig ab, wenn du die voreingestellten Werte nicht verändert hast.
-
-
-[#manually-create-orders]
-== Aufträge manuell anlegen
-
-Du kannst Aufträge manuell im System anlegen, z.B. wenn eine Bestellung per Telefon getätigt wird. Es gibt verschiedene Möglichkeiten, die du dafür nutzen kannst:
-
-* In der xref:auftraege:auftraege-verwalten.adoc#240[Kontaktübersicht]
-* In den xref:auftraege:auftraege-verwalten.adoc#210[Kontaktdaten]
-* In einem bestehenden xref:auftraege:auftraege-verwalten.adoc#220[Auftrag]
-* Über einen xref:auftraege:auftraege-verwalten.adoc#230[Barverkauf]
-
-Diese verschiedenen Vorgehensweisen werden nachfolgend beschrieben.
-
-[IMPORTANT]
-.E-Mail-Versand
-====
-Bei manuell angelegten Aufträgen wird keine automatische E-Mail, z.B. als Auftragsbestätigung, an Kund:innen versendet. Grund dafür ist, dass das System nicht wissen kann, wann alle Einstellungen zu diesem Auftrag vorgenommen wurden. Stoße daher den Versand einer E-Mail-Vorlage manuell im Auftrag im Bereich xref:auftraege:working-with-orders.adoc#available-areas[E-Mail-Service] an.
-====
-
-//hier weiter Inhalte aus Kapitel 2 übernehmen und anpassen
 
 
 [#order-group-functions]
@@ -114,7 +95,7 @@ Rechts in der Auftragsübersicht sind je nach Auftragstyp weitere Funktionen üb
 //Alle Bereiche hier aufführen
 
 
-
+//evtl. zu kapitel zur toolbar hinzufügen?
 [#redeem-coupon]
 == Gutscheine einlösen
 
@@ -163,3 +144,30 @@ Gutscheine einlösen:
 |Gib den Wert des Gutscheins in € ein.
 
 |===
+
+
+
+
+
+
+
+
+[#checklist-sales-prices]
+== Checkliste für Verkaufspreise
+
+Nutze diese Checkliste, wenn du in einem Auftrag etwas an den Artikelpositionen ändern möchtest und auf Probleme stößt. In vielen Fällen liegt es daran, dass die Einstellungen für die Verkaufspreise nicht zu den Parametern des Auftrages passen.
+
+Überprüfe daher, ob folgende Einstellungen für den entsprechenden Preis im Menü *Einrichtung » Artikel » Verkaufspreise* gesetzt sind:
+
+[%interactive]
+
+* [ ] Für *Ab Menge* ist *1* gesetzt.
+* [ ] Die *Währung* des Auftrages ist für den Preis freigeschaltet.
+* [ ] Dem Preis ist kein *Preistyp* zugeordnet, d.h. weder UVP, noch Aktionspreis oder Setpreis sind ausgewählt.
+* [ ] Der *Mandant* des Auftrages ist aktiviert.
+* [ ] Die entsprechende *Kundenklasse* ist aktiviert, wenn sie im System eingerichtet sind.
+* [ ] Das *Land*, aus dem der Auftrag kommt, ist aktiviert.
+* [ ] In den *Herkünften* ist *Manuelle Eingabe* aktiviert.
+* [ ] Die entsprechende *Herkunft* des Auftrages ist aktiviert.
+
+Konntest du diese Punkte abhaken, solltest du Änderungen an den Artikelpositionen vornehmen können. Falls du immer noch auf Schwierigkeiten stößt, findest du ausführlichere Informationen zu Verkaufspreisen auf der Handbuchseite xref:artikel:preise.adoc#[Verkaufspreise und Preiskalkulation]. Kontaktiere ansonsten unsere Supporter im link:https://forum.plentymarkets.com/[Forum].
