--- a/docs/de-de/modules/auftraege/pages/order-types.adoc
+++ b/docs/de-de/modules/auftraege/pages/order-types.adoc
@@ -6,13 +6,16 @@
 Mithilfe von Auftragstypen werden die unterschiedlichen Geschäftsvorfälle von Aufträgen kenntlich gemacht. Welche Möglichkeiten dir Auftragstypen bieten und wie du mit diesen arbeitest, erfährst du auf den folgenden Seiten.
 Die folgenden Auftragstypen stehen dir in plentymarkets zur Verfügung.
 
-* xref:auftraege:order-type-sales-order.adoc#[Auftrag]
- * xref:auftraege:order-type-offer.adoc#[Angebot]
- * xref:auftraege:order-type-advance-order.adoc#[Vorbestellung]
- * xref:auftraege:order-type-warranty.adoc#[Gewährleistung]
- * xref:auftraege:order-type-credit-note.adoc#[Gutschrift]
- * xref:auftraege:order-type-delivery-order.adoc#[Lieferauftrag]
- * xref:auftraege:order-type-repair.adoc#[Reparatur]
- * xref:auftraege:order-type-return.adoc#[Retoure]
- * xref:auftraege:order-type-multi-order.adoc#[Sammelauftrag]
- * xref:auftraege:order-type-multi-credit-note.adoc#[Sammelgutschrift]
+* xref:auftraege:order-type-sales-order.adoc#[Auftrag] ??
+* xref:auftraege:order-type-offer.adoc#[Angebot] ??
+* xref:auftraege:order-type-advance-order.adoc#[Vorbestellung]
+* xref:auftraege:order-type-warranty.adoc#[Gewährleistung]
+* xref:auftraege:order-type-credit-note.adoc#[Gutschrift]
+* xref:auftraege:order-type-delivery-order.adoc#[Lieferauftrag]
+* xref:auftraege:order-type-repair.adoc#[Reparatur]
+* xref:auftraege:order-type-return.adoc#[Retoure]
+* xref:auftraege:order-type-multi-order.adoc#[Sammelauftrag]
+* xref:auftraege:order-type-multi-credit-note.adoc#[Sammelgutschrift] ??
+//was ist mit sammellieferung und teillieferung (siehe filteroptionen für auftragstyp in auftragsübersicht)
+
+//jacqueline fragen: 3 der order types sind nicht dokumentiert??
