feat: add shopbuilder content regeneration note

--- a/docs/de-de/modules/plugins/pages/faq-plugins.adoc
+++ b/docs/de-de/modules/plugins/pages/faq-plugins.adoc
@@ -66,6 +66,8 @@ Weitere Informationen zum Bestellen von SSL-Zertifikaten findest du auf der Seit
 .Ich habe das Plugin erfolgreich bereitgestellt. Warum wird es jetzt nicht in meinem Webshop angezeigt?
 --
 Manche Plugins müssen noch konfiguriert werden bevor du sie einsetzen kannst. Prüfe nochmal die Anleitung des Plugins auf plentyMarketplace. Stelle inbesondere sicher, dass du alle xref:plugins:installierte-plugins-konfigurieren.adoc#container-verknuepfungen[Container-Verknüpfungen] gesetzt hast, falls vorhanden.
+
+Wenn es sich bei dem Plugin um ein ShopBuilder-Widget handelt, versuche in ShopBuilder auf die Schaltfläche *Alle Inhalte neu generieren* zu klicken.
 --
 
 [.collapseBox]
