fix: link to developers from nav

--- a/docs/en-gb/modules/ROOT/nav.adoc
+++ b/docs/en-gb/modules/ROOT/nav.adoc
@@ -446,7 +446,7 @@
 ** xref:plugins:updating-installed-plugins.adoc[Updating installed plugins]
 ** xref:plugins:removing-installed-plugins.adoc[Removing installed plugins]
 ** xref:plugins:faq-plugins.adoc[FAQ: Plugins]
-** xref:plugins:developers.adoc[Developers guide]
+** link:https://developers.plentymarkets.com/en-gb/developers/main/homepage.html[Developers guide]
 * xref:automation:automation.adoc[Automation]
 ** xref:automation:procedure-manager.adoc[Procedure manager]
 ** xref:automation:event-procedures.adoc[Event procedures]
